GNOME Bugzilla – Bug 724793
upnp: Prevent crash with some UPnP servers
Last modified: 2014-02-24 00:30:53 UTC
.
Created attachment 269794 [details] [review] upnp: Prevent crash with some UPnP servers The "Skifta" iOS UPnP server seems to pass us " " as a list of changed items. We need to protect better against bad input and avoid accessing data beyond the array.
commit 61fce31b9dc9fc6b246f0cb533f62877ad509ed8 Author: Bastien Nocera <hadess@hadess.net> Date: Thu Feb 20 12:42:02 2014 +0100 upnp: Prevent crash with some UPnP servers The "Skifta" iOS UPnP server seems to pass us " " as a list of changed items. We need to protect better against bad input and avoid accessing data beyond the array. https://bugzilla.gnome.org/show_bug.cgi?id=724793 src/upnp/grl-upnp.c | 23 ++++++++++++++++------- 1 file changed, 16 insertions(+), 7 deletions(-)
*** Bug 725021 has been marked as a duplicate of this bug. ***