upnp: Prevent crash with some UPnP servers

The "Skifta" iOS UPnP server seems to pass us " " as a list
of changed items. We need to protect better against bad input and
avoid accessing data beyond the array.

https://bugzilla.gnome.org/show_bug.cgi?id=724793